fix some spacing in modals, check bag messages, #271

--- a/web/themes/quartiers_solidaires/assets/components/organisms/modal/modal.scss
+++ b/web/themes/quartiers_solidaires/assets/components/organisms/modal/modal.scss
@@ -16,6 +16,7 @@
   flex-shrink: 0;
 
   .alert {
+    margin-top: $spacer;
     margin-bottom: 0;
 
     .close {
@@ -37,10 +38,20 @@
   display: flex;
   flex-direction: column;
   overflow-y: auto;
+
+  .fullpage-wrapper {
+    min-height: auto;
+  }
 }
 
 .modal-footer {
   flex-shrink: 0;
+
+  @each $color, $value in $theme-colors {
+    .bg-#{$color} & {
+
+    }
+  }
 }
 
 .modal-full {
